Evaluation notebook work

--- a/results/adventuregame_overview_table.html
+++ b/results/adventuregame_overview_table.html
@@ -2,10 +2,10 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>-, clemscore</th>
-      <th>adventuregame, % Played</th>
-      <th>adventuregame, Quality Score</th>
-      <th>adventuregame, Quality Score (std)</th>
+      <th>clemscore</th>
+      <th>% Played</th>
+      <th>Quality Score</th>
+      <th>Quality Score (std)</th>
     </tr>
   </thead>
   <tbody>
