--- a/results/hallucination_sums.html
+++ b/results/hallucination_sums.html
@@ -43,6 +43,16 @@
       <td>0.062500</td>
     </tr>
     <tr>
+      <th>Qwen1.5-72B-Chat</th>
+      <td>10.0</td>
+      <td>0.156250</td>
+    </tr>
+    <tr>
+      <th>Qwen2-72B-Instruct</th>
+      <td>3.0</td>
+      <td>0.046875</td>
+    </tr>
+    <tr>
       <th>gemma-2-9b-it-q5</th>
       <td>5.0</td>
       <td>0.078125</td>
@@ -56,6 +66,11 @@
       <th>gemma2-9b-it</th>
       <td>5.0</td>
       <td>0.078125</td>
+    </tr>
+    <tr>
+      <th>openchat3.5</th>
+      <td>0.0</td>
+      <td>0.000000</td>
     </tr>
     <tr>
       <th>openchat3.5-GGUF-q5</th>
